controls/cis-eks/workloads/4.6/4.6.3/disallow-default-namespace.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: disallow-default-namespace
  annotations:
      policies.kyverno.io/title: Disallow Default Namespace
      policies.kyverno.io/minversion: 1.14.1
      policies.kyverno.io/category: Multi-Tenancy
      policies.kyverno.io/severity: medium
      policies.kyverno.io/subject: Pod
      policies.kyverno.io/description: >
          Kubernetes Namespaces are an optional feature that provide a way to segment and isolate cluster resources across multiple applications and users. As a best practice, workloads should be isolated with Namespaces. Namespaces should be required and the default (empty) Namespace should not be used. This policy validates that Pods specify a Namespace name other than `default`. Rule auto-generation is disabled here due to Pod controllers need to specify the `namespace` field under the top-le [...]
spec:
  validationActions:
      - Audit
  evaluation:
      background:
          enabled: true
  matchConstraints:
      resourceRules:
          - apiGroups: [""]
            apiVersions: ["v1"]
            resources: ["pods"]
            operations: ["CREATE", "UPDATE"]
          - apiGroups: ["apps", "batch"]
            apiVersions: ["v1"]
            resources: ["daemonsets", "deployments", "jobs", "statefulsets"]
            operations: ["CREATE", "UPDATE"]
  validations:
      - expression: "has(object.metadata) && has(object.metadata.namespace) && object.metadata.namespace != 'default'"
        message: "Using 'default' namespace is not allowed."
